# Data-Structure-tasks

./: CMakeLists.txt  README.md
apps/: a1_stock_span.cpp  a2_balanced_parentheses.cpp  a3_awesome_application.cpp  analyzeECG.cpp  countDNA.cpp  count_words.cpp  gamilatest.cpp  heron.cpp  main.cpp  main2.cpp  unique_words.cpp
data/: set2.txt
headers/: Amr.hpp  Gamila.hpp  MGY.hpp  Rania.hpp  arrays.hpp  bst.hpp  ecg.hpp  map.hpp  mathematics.hpp  set.hpp
